attempt to get windows travis build working again